[workspace]
resolver = "2"

default-members = ["bbpe"]
members = [
    "bbpe", # main binary
    "bbpe-servo",
]

[workspace.package]
version = "0.1.0"

[patch.crates-io]
surfman-chains = { git = "https://github.com/servo/surfman-chains.git" }
iced_winit = { git = "https://github.com/BBaoVanC/iced.git", branch = "bbpe-fix" }
